--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,30 @@
-.container {
+body {
     width: 1920px !important;
+    background: #FFD845 !important;
 }
+
+.poki{
+    max-width: 1338px !important;
+    padding: 0 !important;
+}
+
+
+.js__forms{
+    max-width: 1125px;
+
+}
+
 
 .js__forms {
     margin-top: 70px;
-    margin-bottom: 100px;
+    margin-bottom: 70px;
 }
+
+.bii{
+    margin-top: 7px;
+    margin-left: -70px;
+}
+
 
 .types-select {
     border-radius: 15px !important;
@@ -27,4 +46,48 @@
     border: 1px solid #ced4da !important;
     border-radius: 15px !important;
     width: 200px !important;
+    background: #fff !important ;
+}
+
+
+
+.pokemons-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+}
+
+li{
+    margin-top: 30px;
+    width: 307px;
+    list-style-type: none;
+    border: 2px solid #000000;
+    border-radius: 20px;
+    margin-right: 30px;
+    background: #fff;
+}
+
+li:nth-child(4n){
+    margin-right: 0;
+}
+
+img{
+    margin-right: 75px;
+    margin-left: 75px;
+    margin-top: 35px;
+    margin-bottom: 68px;
+  
+}
+
+.pocemon__inform{
+    display: flex;
+    margin-top: 25px;
+    margin-bottom: 37px;
+}
+
+.inform__height{
+    margin-left: 30px;
+    margin-right: 30px;
+    
 }
